[gd_scene load_steps=3 format=3 uid="uid://cnl53v0lrb1mv"]

[ext_resource type="Script" path="res://scenes/_system/pause/Options.gd" id="1_54q7r"]
[ext_resource type="Theme" uid="uid://bi4o4b5fob7ki" path="res://Title/fw_theme.tres" id="3_xn7oq"]

[node name="Options" type="TabContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -375.0
offset_right = 600.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54q7r")

[node name="#options_game#" type="TabBar" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath("../#options_control#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_video#")
focus_neighbor_bottom = NodePath("GameSetting/VSplit/Language/language_button")
focus_next = NodePath("../#options_video#")
focus_previous = NodePath("../#options_control#")

[node name="GameSetting" type="ScrollContainer" parent="#options_game#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplit" type="VBoxContainer" parent="#options_game#/GameSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Language" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="language_text" type="Label" parent="#options_game#/GameSetting/VSplit/Language"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.language"

[node name="language_button" type="OptionButton" parent="#options_game#/GameSetting/VSplit/Language"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../DataPath/datapath_button")
focus_next = NodePath("../../DataPath/datapath_button")
focus_previous = NodePath("../../DataPath/datapath_button")
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "中文"
popup/item_1/id = 1

[node name="DataPath" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2

[node name="datapath_text" type="Label" parent="#options_game#/GameSetting/VSplit/DataPath"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.data"

[node name="datapath_button" type="Button" parent="#options_game#/GameSetting/VSplit/DataPath"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../Language/language_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../Language/language_button")
focus_next = NodePath("../../Language/language_button")
focus_previous = NodePath("../../Language/language_button")

[node name="path_choose" type="FileDialog" parent="#options_game#/GameSetting/VSplit/DataPath/datapath_button"]
gui_embed_subwindows = true
title = "Open a Directory"
initial_position = 2
size = Vector2i(750, 500)
ok_button_text = "选择当前文件夹"
cancel_button_text = "button.cancel"
file_mode = 2
access = 2
use_native_dialog = true

[node name="#options_video#" type="TabBar" parent="."]
visible = false
layout_direction = 1
layout_mode = 2
focus_neighbor_left = NodePath("../#options_game#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_audio#")
focus_neighbor_bottom = NodePath("VideoSetting/VSpilt/Fullscreen/fullscreen_button")
focus_next = NodePath("../#options_audio#")
focus_previous = NodePath("../#options_game#")

[node name="VideoSetting" type="ScrollContainer" parent="#options_video#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_video#/VideoSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="HBoxContainer" parent="#options_video#/VideoSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fullscreen_text" type="Label" parent="#options_video#/VideoSetting/VSpilt/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.fullscreen"

[node name="fullscreen_button" type="CheckBox" parent="#options_video#/VideoSetting/VSpilt/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true

[node name="fullscreen_warn" type="AcceptDialog" parent="#options_video#/VideoSetting/VSpilt/Fullscreen/fullscreen_button"]
title = ""
initial_position = 2
size = Vector2i(500, 250)
unresizable = true
theme = ExtResource("3_xn7oq")
ok_button_text = "button.confirm"
dialog_text = "fatal_window.fullscreen_warning"
dialog_autowrap = true

[node name="Scale" type="HBoxContainer" parent="#options_video#/VideoSetting/VSpilt"]
layout_mode = 2

[node name="scale_text" type="Label" parent="#options_video#/VideoSetting/VSpilt/Scale"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.scale"

[node name="scale_button" type="SpinBox" parent="#options_video#/VideoSetting/VSpilt/Scale"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
focus_neighbor_top = NodePath("../../Fullscreen/fullscreen_button")
focus_previous = NodePath("../../Fullscreen/fullscreen_button")
max_value = 5.0
step = 0.01
value = 1.0

[node name="#options_audio#" type="TabBar" parent="."]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../#options_video#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_control#")
focus_neighbor_bottom = NodePath("AudioSetting/VSpilt/Master/master_button")
focus_next = NodePath("../#options_control#")
focus_previous = NodePath("../#options_video#")

[node name="AudioSetting" type="ScrollContainer" parent="#options_audio#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_audio#/AudioSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="master_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Master"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.master"

[node name="master_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/Master"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_bottom = NodePath("../../Music/bgm_button")
focus_next = NodePath("../../Music/bgm_button")
focus_previous = NodePath("../../SFX/sfx_button")
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2

[node name="bgm_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.bgm"

[node name="bgm_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/Music"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Master/master_button")
focus_neighbor_bottom = NodePath("../../SFX/sfx_button")
focus_next = NodePath("../../SFX/sfx_button")
focus_previous = NodePath("../../Master/master_button")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2

[node name="sfx_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.sfx"

[node name="sfx_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Music/bgm_button")
focus_neighbor_bottom = NodePath("../../Master/master_button")
focus_next = NodePath("../../Master/master_button")
focus_previous = NodePath("../../Music/bgm_button")
max_value = 1.0
step = 0.01
value = 1.0

[node name="#options_control#" type="TabBar" parent="."]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../#options_audio#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_game#")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../#options_game#")
focus_previous = NodePath("../#options_audio#")

[node name="ControlSetting" type="ScrollContainer" parent="#options_control#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_control#/ControlSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MouseSen" type="HBoxContainer" parent="#options_control#/ControlSetting/VSpilt"]
layout_mode = 2

[node name="mouse_text" type="Label" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.control.mouse_sen"

[node name="mouse_button" type="HSlider" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.4

[connection signal="tab_changed" from="." to="." method="_on_tab_changed"]
[connection signal="item_selected" from="#options_game#/GameSetting/VSplit/Language/language_button" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DataPath/datapath_button" to="." method="_on_datapath_button_pressed"]
[connection signal="dir_selected" from="#options_game#/GameSetting/VSplit/DataPath/datapath_button/path_choose" to="." method="_on_path_choose_dir_selected"]
[connection signal="toggled" from="#options_video#/VideoSetting/VSpilt/Fullscreen/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="close_requested" from="#options_video#/VideoSetting/VSpilt/Fullscreen/fullscreen_button/fullscreen_warn" to="." method="_on_fullscreen_warn_close_requested"]
[connection signal="value_changed" from="#options_video#/VideoSetting/VSpilt/Scale/scale_button" to="." method="_on_scale_button_value_changed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/Master/master_button" to="." method="_on_master_button_value_changed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/Music/bgm_button" to="." method="_on_bgm_button_value_changed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/SFX/sfx_button" to="." method="_on_sfx_button_value_changed"]
[connection signal="value_changed" from="#options_control#/ControlSetting/VSpilt/MouseSen/mouse_button" to="." method="_on_mouse_button_value_changed"]
